--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,9 @@
 Changelog
 
+v0.03
+* Script will exit if it can't find a ROM.
+* Should now work on Windows (not tested).
+
 v0.02
 * Can now detect IPS patches.
 * Added --verbose flag for the curious type.
