--- a/README
+++ b/README
@@ -2,14 +2,22 @@ NAME
     ips.pl - Patches a file with records provided from an IPS patch.
 
 SYNOPSIS
-        ips.pl myfilepatch.ips my.file
+            ips.pl [--verbose] myfilepatch.ips my.file my.file2 my.file3
 
 DESCRIPTION
-    ips.pl is a revision of a Perl script found in the wild
+    ips.pl is a reimplementation of a Perl script found in the wild
     (<http://www.zophar.net/utilities/patchutil/ips-pl.html>) which will
     apply patches in the IPS format to the file specified. The IPS file
     format can be found at <http://zerosoft.zophar.net/ips.php>. It supports
     RLE (Run Length Encoded) IPS patches as well.
+
+  Flags
+    *   ips.pl --verbose patch.ips file.rom
+
+        Prints details on each applied patch record to STDOUT.
+
+HOMEPAGE
+    <http://github.com/chinesefood/ips.pl/tree/master>
 
 COPYRIGHT
     Copyright 2003, 2009 chinesefood
